--- a/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
@@ -1049,7 +1049,7 @@
             <input type="hidden" id="hidIsReturn" class="hidIsReturn" />
 
             <div class="wrapper">
-                <div class="tbresponsive">
+                <div class="customresponsive">
                     <table id="tabRequisition" class="example">
                         <thead class="theader">
                             <tr>
@@ -1126,19 +1126,19 @@
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Good1*@
-                                    <input type="text" id="txtGood" class="txtGood controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtGood" class="txtGood controldisable select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Lost1*@
-                                    <input type="text" id="txtLost" class="txtLost controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtLost" class="txtLost controldisable select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Repair1*@
-                                    <input type="text" id="txtRepair" class="txtRepair controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtRepair" class="txtRepair controldisable select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Bad1*@
-                                    <input type="text" id="txtBad" class="txtBad controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtBad" class="txtBad controldisable select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn hidecolumn">
                                     @*Return Qty1*@
@@ -1205,19 +1205,19 @@
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Good2*@
-                                    <input type="text" id="txtGood" class="txtGood controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtGood" class="txtGood controldisable select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Lost2*@
-                                    <input type="text" id="txtLost" class="txtLost controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtLost" class="txtLost controldisable select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Repair2*@
-                                    <input type="text" id="txtRepair" class="txtRepair controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtRepair" class="txtRepair controldisable select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Bad2*@
-                                    <input type="text" id="txtBad" class="txtBad controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtBad" class="txtBad controldisable select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn hidecolumn">
                                     @*Return Qty1*@
@@ -1299,19 +1299,19 @@
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Good1*@
-                                    <input type="text" id="txtGood2" class="txtGood2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtGood2" class="txtGood2 controldisable2 select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Lost1*@
-                                    <input type="text" id="txtLost2" class="txtLost2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtLost2" class="txtLost2 controldisable2 select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Repair1*@
-                                    <input type="text" id="txtRepair2" class="txtRepair2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtRepair2" class="txtRepair2 controldisable2 select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Bad1*@
-                                    <input type="text" id="txtBad2" class="txtBad2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtBad2" class="txtBad2 controldisable2 select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn hidecolumn">
                                     @*Return Qty1*@
@@ -1357,19 +1357,19 @@
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Good2*@
-                                    <input type="text" id="txtGood2" class="txtGood2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtGood2" class="txtGood2 controldisable2 select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Lost2*@
-                                    <input type="text" id="txtLost2" class="txtLost2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtLost2" class="txtLost2 controldisable2 select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Repair2*@
-                                    <input type="text" id="txtRepair2" class="txtRepair2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtRepair2" class="txtRepair2 controldisable2 select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Bad2*@
-                                    <input type="text" id="txtBad2" class="txtBad2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtBad2" class="txtBad2 controldisable2 select-size50-height23 mnReturn" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn hidecolumn">
                                     @*Return Qty1*@
