--- a/Alpha/AlphaMvc/Views/SecurityProfile/EditSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/EditSecurityProfile.cshtml
@@ -45,6 +45,7 @@
 </div>
 <script type="text/javascript">
     $(document).ready(function () {
+        CheckAuthorization();
         var input = window.location.href;
         var after = input.split('?')[1]
         var val = after.split('=');
