--- a/Alpha/AlphaMvc/Views/User/CreateUser.cshtml
+++ b/Alpha/AlphaMvc/Views/User/CreateUser.cshtml
@@ -69,3 +69,8 @@
     }
     @*//=================================================================== CSS w3school*@
 </div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        CheckAuthorization();
+    });
+</script>
