--- a/Alpha/AlphaMvc/Content/custom.css
+++ b/Alpha/AlphaMvc/Content/custom.css
@@ -20,6 +20,21 @@
  */
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
+.padleft15p
+{
+    padding-left: 15% !important;
+}
+.padleft10p
+{
+    padding-left: 10% !important;
+}
+.pad0{
+        padding: 0px !important;
+}
+.txtarea
+{
+    height: 100px !important;
+}
 .wd70{
     width: 70px;
 }
@@ -43,6 +58,11 @@
 .tbresponsive
 {
     width: 1200px;
+    overflow-x: scroll;
+}
+.customresponsive
+{
+    /*width: 1200px;*/
     overflow-x: scroll;
 }
 .required
