--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -115,24 +115,29 @@ function GetDetail(currentMonth) {
        });
 }
 $(document).ready(function () {
-    var currentDate = new Date();
-    var currentMonth = currentDate.getMonth() + 1;
-    $('#body').attr("style", "background-color: #fbfbf1; clear: both; padding-bottom: 3%;");
+    if (localStorage['UserID'] != undefined) {
+        var currentDate = new Date();
+        var currentMonth = currentDate.getMonth() + 1;
+        $('#body').attr("style", "background-color: #fbfbf1; clear: both; padding-bottom: 3%;");
 
-    GetDetail(currentMonth);
-    GetCalendarlist(currentMonth);
-    $('#calendar').on('click', '.fc-next-button', function () {
-        var currentMonth = $('#calendar').fullCalendar('getDate');
-        currentMonth = parseInt(currentMonth.format('M'));
         GetDetail(currentMonth);
         GetCalendarlist(currentMonth);
-    });
-    $('#calendar').on('click', '.fc-prev-button', function () {
-        var currentMonth = $('#calendar').fullCalendar('getDate');
-        currentMonth = parseInt(currentMonth.format('M'));
-        GetDetail(currentMonth);
-        GetCalendarlist(currentMonth);
-    });
+        $('#calendar').on('click', '.fc-next-button', function () {
+            var currentMonth = $('#calendar').fullCalendar('getDate');
+            currentMonth = parseInt(currentMonth.format('M'));
+            GetDetail(currentMonth);
+            GetCalendarlist(currentMonth);
+        });
+        $('#calendar').on('click', '.fc-prev-button', function () {
+            var currentMonth = $('#calendar').fullCalendar('getDate');
+            currentMonth = parseInt(currentMonth.format('M'));
+            GetDetail(currentMonth);
+            GetCalendarlist(currentMonth);
+        });
+    }
+    else {
+        location = "../Login/IndexLogin";
+    }
 });
 
 </script>
