--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -10,6 +10,9 @@
         background: #fbfbf1;
         width: 335px;
     }
+    .pad0{
+        padding: 0px;
+    }
 </style>
 @*<table>
     <tr>
@@ -28,151 +31,166 @@
             <input type="hidden" id="hidAttachPath" />
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-xs-4 col-sm-3 col-lg-2">
-                        <div class="form-group">
-                            <label for="txtSerialNo">Serial Number:</label>
-                            <input type="text" id="txtSerialNo" class="form-control" placeholder="" required autofocus/>
+                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
+                        <div class="short-div" @*style="background-color:lightblue"*@>
+                            @*Span 2*@
+                            <div class="form-group">
+                                <label for="txtSerialNo">Serial Number:</label>
+                                <input type="text" id="txtSerialNo" class="form-control" placeholder="" autofocus required />
+                            </div>
+                        </div>
+                        <div class="short-div">
+                            @*Span 2*@
+                            <div class="form-group">
+                                <label for="cmbProductType">ประเภทสินค้า:</label>
+                                <select id="cmbProductType" name="cmbProductType" class="form-control cmbsize106"></select>
+                            </div>
+                        </div>
+                        <div class="short-div" >
+                            @*Span 2*@
+                            <div class="form-group">
+                                <label for="txtSize">ขนาด:</label>
+                                <input type="text" id="txtSize" name="field2" class="form-control " placeholder="" />
+                            </div>
+                        </div>
+                        <div class="short-div">
+                            @*Span 2*@
+                            <div class="form-group">
+                                <label for="txtModel">รุ่น:</label>
+                                <input type="text" id="txtModel" class="form-control" placeholder="" />
+                            </div>
+                        </div>
+                        <div class="short-div">
+                            @*Span 2*@
+                            <div class="form-group">
+                                <label for="txtDiscription">รายละเอียด:</label>
+                                <textarea id="txtDiscription" class="form-control txtareasize106 txtarea"></textarea>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-xs-4 col-sm-3 col-lg-2">
-                        <div class="form-group">
-                            <label for="txtMachineNo">หมายเลขเครื่อง:</label>
-                            <input type="text" id="txtMachineNo" class="form-control" placeholder="" required />
-                            <input type="hidden" id="hidProductID" />
+                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
+                        <div class="short-div">
+                            @*Span 3*@
+                            <div class="form-group">
+                                <label for="txtMachineNo">หมายเลขเครื่อง:</label>
+                                <input type="text" id="txtMachineNo" class="form-control" placeholder="" autofocus required />
+                                <input type="hidden" id="hidProductID" />
+                            </div>
+                        </div>
+                        <div class="short-div">
+                            @*Span 3*@
+                            <div class="form-group">
+                                <label for="txtBrand">ยี่ห้อ:</label>
+                                <input type="text" id="txtBrand" class="form-control" placeholder="" />
+                            </div>
+                        </div>
+                        <div class="short-div">
+                            @*Span 3*@
+                            <div class="form-group">
+                                <label for="cmbUnitWeight">หน่วยนับ:</label>
+                                <select id="cmbUnitWeight" class="form-control cmbsize106"></select>
+                            </div>
+                        </div>
+                        <div class="short-div">
+                            @*Span 3*@
+                            <div class="form-group">
+                                <label for="txtLifetime">อายุใช้งาน (ปี):</label>
+                                <input type="text" id="txtLifetime" class="form-control txtsize80" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" placeholder="" />
+                            </div>
+                        </div>
+                        <div class="short-div">
+                            @*Span 3*@
+                            <div class="form-group">
+                                <label for="txtRemark">หมายเหตุ:</label>
+                                <input type="text" id="txtRemark" class="form-control" placeholder="" />
+                            </div>
                         </div>
                     </div>
-                    <div class="col-xs-4 col-sm-3 col-lg-2">
-                        <div class="form-group">
-                            <label for="dtReceiveDate">รับเข้า:</label>
-                            <input type="text" id="dtReceiveDate" class="form-control" placeholder="" required />
+                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
+                        <div class="short-div">
+                            @*Span 4*@
+                            <div class="form-group">
+                                <label for="dtReceiveDate">รับเข้า:</label>
+                                <input type="text" id="dtReceiveDate" class="form-control" placeholder="" required />
+                            </div>
+                        </div>
+                        <div class="col-lg-12 col-md-2 col-sm-3 col-xs-12 pad0">
+                            <div class="col-xs-4 col-sm-3 col-lg-6 pad0">
+                                <div class="form-group">
+                                    <label for="txtBalance">ยกมา:<span class="required">*</span></label>
+                                    <input type="number" id="txtBalance" class="form-control txtsize80" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 46" placeholder="" onblur="GetRemain()" required />
+                                </div>
+                            </div>
+                            <div class="col-xs-4 col-sm-3 col-lg-6 pad0">
+                                <div class="form-group">
+                                    <label for="txtRemain">คงเหลือ:<span class="required">*</span></label>
+                                    <input type="number" id="txtRemain" class="form-control txtsize80" placeholder="" required disabled />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-12 col-md-2 col-sm-3 col-xs-12 pad0">
+                            <div class="col-xs-4 col-sm-3 col-lg-6 pad0">
+                                <div class="form-group">
+                                    <label for="txtLost">หาย:</label>
+                                    <input type="text" id="txtLost" class="form-control txtsize80" placeholder="" disabled />
+                                </div>
+                            </div>
+                            <div class="col-xs-4 col-sm-3 col-lg-6 pad0">
+                                <div class="form-group">
+                                    <label for="txtRepair">ซ่อม:</label>
+                                    <input type="text" id="txtRepair" class="form-control txtsize80" placeholder="" disabled />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="short-div">
+                            @*Span 4*@
+                            <div class="form-group">
+                                <label for="txtBreak">ชำรุด:</label>
+                                <input type="text" id="txtBreak" class="form-control txtsize80" placeholder="" disabled />
+                            </div>
+                        </div>
+                        <div class="short-div">
+                            @*Span 4*@
                         </div>
                     </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-xs-4 col-sm-3 col-lg-2">
-                        <div class="form-group">
-                            <label for="cmbProductType">ประเภทสินค้า:</label>
-                            <select id="cmbProductType" name="cmbProductType" class="form-control cmbsize106"></select>
-                        </div>
-                    </div>
-                    <div class="col-xs-4 col-sm-3 col-lg-2">
-                        <div class="form-group">
-                            <label for="txtBrand">ยี่ห้อ:</label>
-                            <input type="text" id="txtBrand" class="form-control" placeholder="" />
-                        </div>
-                    </div>
-                    <div class="col-xs-4 col-sm-3 col-lg-1">
-                        <div class="form-group">
-                            <label for="txtBalance">ยกมา:<span class="required">*</span></label>
-                            <input type="number" id="txtBalance" class="form-control txtsize80" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 46" placeholder="" onblur="GetRemain()" required />
-                        </div>
-                    </div>
-                    <div class="col-xs-4 col-sm-3 col-lg-1">
-                        <div class="form-group">
-                            <label for="txtRemain">คงเหลือ:<span class="required">*</span></label>
-                            <input type="number" id="txtRemain" class="form-control txtsize80" placeholder="" required disabled />
-                        </div>
-                    </div>
-               </div>
-                <div class="row">
-                    <div class="col-xs-4 col-sm-3 col-lg-2">
-                        <div class="form-group">
-                            <label for="txtSize">ขนาด:</label>
-                            <input type="text" id="txtSize" name="field2" class="form-control " placeholder="" />
-                        </div>
-                    </div>
-                    <div class="col-xs-4 col-sm-3 col-lg-2">
-                        <div class="form-group">
-                            <label for="cmbUnitWeight">หน่วยนับ:</label>
-                            <select id="cmbUnitWeight" class="form-control cmbsize106"></select>
-                        </div>
-                    </div>
-                    <div class="col-xs-4 col-sm-3 col-lg-1">
-                        <div class="form-group">
-                            <label for="txtLost">หาย:</label>
-                            <input type="text" id="txtLost" class="form-control txtsize80" placeholder="" disabled />
-                        </div>
-                    </div>
-                    <div class="col-xs-4 col-sm-3 col-lg-1">
-                        <div class="form-group">
-                            <label for="txtRepair">ซ่อม:</label>
-                            <input type="text" id="txtRepair" class="form-control txtsize80" placeholder="" disabled />
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-4 col-sm-3 col-lg-2">
-                        <div class="form-group">
-                            <label for="txtModel">รุ่น:</label>
-                            <input type="text" id="txtModel" class="form-control" placeholder="" />
-                        </div>
-                    </div>
-                    <div class="col-xs-4 col-sm-3 col-lg-2">
-                        <div class="form-group">
-                            <label for="txtLifetime">อายุใช้งาน (ปี):</label>
-                            <input type="text" id="txtLifetime" class="form-control txtsize80" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" placeholder="" />
-                        </div>
-                    </div>
-                    <div class="col-xs-4 col-sm-3 col-lg-2">
-                        <div class="form-group">
-                            <label for="txtBreak">ชำรุด:</label>
-                            <input type="text" id="txtBreak" class="form-control txtsize80" placeholder="" disabled />
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-4 col-sm-3 col-lg-2">
-                        <div class="form-group">
-                            <label for="txtDiscription">รายละเอียด:</label>
-                            <textarea id="txtDiscription" class="form-control txtareasize106"></textarea>
-                        </div>
-                    </div>
-                    <div class="col-xs-4 col-sm-3 col-lg-2">
-                        <div class="form-group">
-                            <label for="txtRemark">หมายเหตุ:</label>
-                            <input type="text" id="txtRemark" class="form-control" placeholder="" />
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-4 col-sm-3 col-lg-2">
+                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 spndiv" >
+                        @*Span 5*@
                         <div class="form-group">
                             <input type="file" name="photo" id="photo" onchange="readURL(this);" style="color:transparent;">
                             <div class="imgpreview"><img id="imgPreview" alt="your image" class="img-responsive" /></div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="table-responsive">
-                        <div class="col-xs-4 col-sm-3 col-lg-2">
-                            <div class="form-group">
-                                <input type="file" id="FileUpload1" multiple />
-                                <table class="example-2" cellspacing="0">
-                                    <thead class="theader">
-                                        <tr>
-                                            <th>No.</th>
-                                            <th>File Name</th>
-                                            <th class="hidecolumn">Path Name</th>
-                                            <th class="imgbin"></th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="result"></tbody>
-                                </table>
+                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 spndiv" >
+                        @*Span 6*@
+                        <div class="table-responsive">
+                            <div class="col-xs-4 col-sm-3 col-lg-2 padleft10p">
+                                <div class="form-group">
+                                    <input type="file" id="FileUpload1" multiple />
+                                    <table class="example-2" cellspacing="0">
+                                        <thead class="theader">
+                                            <tr>
+                                                <th>No.</th>
+                                                <th>File Name</th>
+                                                <th class="hidecolumn">Path Name</th>
+                                                <th class="imgbin"></th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="result"></tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-4 col-sm-3 col-lg-2">
+                    <div class="col-xs-6 col-sm-6 col-lg-6">
                         <div class="form-group">
                             <button type="button" id="btnSave" class="btn btn-primary mgr10" onclick="validate()">Save</button>
                             <button type="button" id="btnCancel" class="btn btn-danger" onclick="Redirect()">Cancel</button>
-                            @*<button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'Products', 0)">Save</button>*@
                         </div>
                     </div>
                 </div>
-              </div>
+            </div>
                 @*<ul class="form-style-1">*@
                     @*<li>
                         <label class="label-2" style="margin-right: 25%;">Serial Number <span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;">หมายเลขเครื่อง</label>
